# SHADER

./: CMakeLists.txt  Default.py  Magic-Spell.py  Purple-Vortex.py  README.md  config.h.in
config/: launch.json
include/: bufferObjects.h  cell.h  debug.h  dodecahedron.h  helper.h  models.h  shaderClass.h  shaderObjects.h  shape.h  spells.h  textures.h  window.h  world.h
include/glad/: glad.h
models/demon_a_obj/: demon_source.mtl  merge_duplicates.mtl  sprint_draft_1.fbx  sprint_draft_2.fbx
programs/: card-example.glsl  cube-fragment.glsl  cube-vertex.glsl  dedecahedron.glsl  default.vert  magic-spell.glsl  minimum-vertex.glsl  nvidia-distance-example.glsl  purple-vortex.glsl  stereographic.vert
scraps/: crystal_normals_lights.frag  example0.hlsl  gradient.hlsl  icosahedron_depth.frag  isosahedron.glsl
shaders/: book.frag  book.vert  displacement.vert  stereographic.vert  textured.frag
src/: bufferObjects.cpp  cell.cpp  dodecahedron.cpp  glad.c  helper.cpp  main.cpp  models.cpp  shaderClass.cpp  shaderObjects.cpp  spells.cpp  textures.cpp  window.cpp  world.cpp
