cmake_minimum_required(VERSION 3.26.3)
project("OWDT-OPENGL")

find_package(PkgConfig)
pkg_search_module(GLFW REQUIRED glfw3)
find_package(OpenGL REQUIRED)
find_package(glm REQUIRED)
find_package(assimp REQUIRED)
include_directories("./include/")

#file(GLOB SHADER_FILES "${CMAKE_SOURCE_DIR}/programs/*")
#file(COPY ${SHADER_FILES} DESTINATION "${CMAKE_BINARY_DIR}/programs")

set(SHADER_DIR "${CMAKE_SOURCE_DIR}/shaders")
set(TEXTURE_DIR "${CMAKE_SOURCE_DIR}/textures")
configure_file(config.h.in config.h)
include_directories(${CMAKE_BINARY_DIR})

file(GLOB SOURCES "src/*.cpp")
add_executable(run "src/glad.c" ${SOURCES})
target_link_libraries(run ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES} glm::glm assimp "-ldl")